ft demo